--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     }
   },
   "dependencies": {
-    "commander": "^6.0.0"
+    "commander": "^6.0.0",
+    "leveldown": "^5.6.0",
+    "levelup": "^4.4.0"
   }
 }
