--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "codenav",
-  "version": "1.0.0",
+  "name": "@viqueen/codenav",
+  "version": "1.0.0-m02",
   "description": "code navigation",
   "bin": {
     "cnav": "./cli/bin/cnav",
