--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codenav",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "code navigation",
   "bin": {
     "cnav": "./cli/bin/cnav"
@@ -35,6 +35,7 @@
   "dependencies": {
     "commander": "^6.0.0",
     "leveldown": "^5.6.0",
-    "levelup": "^4.4.0"
+    "levelup": "^4.4.0",
+    "query-string": "^6.13.6"
   }
 }
