--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
   },
   "scripts": {
     "pretty:check": "prettier --check .",
-    "pretty": "prettier --check --write ."
+    "pretty": "prettier --check --write .",
+    "build:dev": "nodemon",
+    "build:prod": "rimraf ./dist && tsc"
   },
+  "files": [
+    "cli",
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/viqueen/codenav.git"
@@ -25,8 +31,13 @@
   },
   "homepage": "https://github.com/viqueen/codenav#readme",
   "devDependencies": {
+    "@types/node": "^14.14.25",
     "husky": "^4.2.5",
-    "prettier": "^2.0.5"
+    "nodemon": "^2.0.7",
+    "prettier": "^2.0.5",
+    "rimraf": "^3.0.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.4"
   },
   "husky": {
     "hooks": {
