--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "pretty:check": "prettier --check .",
     "pretty": "prettier --check --write .",
     "build:dev": "nodemon",
-    "build:prod": "rimraf ./dist && tsc"
+    "build:prod": "rimraf ./dist && tsc",
+    "test": "jest"
   },
   "files": [
     "cli",
@@ -31,13 +32,16 @@
   },
   "homepage": "https://github.com/viqueen/codenav#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.25",
     "husky": "^4.2.5",
+    "jasmine-ts": "^0.3.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.4"
+    "typescript": "^4.1.5"
   },
   "husky": {
     "hooks": {
