noissue: consolidate types into one main file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,11 @@
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
-  "exclude": ["node_modules", "cli/lib", "dist", "src/**/*.spec.ts"]
+  "exclude": [
+    "node_modules",
+    "cli/lib",
+    "dist",
+    "src/**/*.spec.ts",
+    "jest.config.js"
+  ]
 }
