--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "pretty:check": "prettier --check .",
     "pretty": "prettier --check --write .",
     "build:dev": "nodemon",
-    "build:prod": "rimraf ./dist && tsc",
+    "build:prod": "rimraf ./dist && tsc -b tsconfig.prod.json",
     "test": "jest"
   },
   "files": [
@@ -33,13 +33,15 @@
   "homepage": "https://github.com/viqueen/codenav#readme",
   "devDependencies": {
     "@types/jest": "^26.0.20",
+    "@types/leveldown": "^4.0.2",
+    "@types/levelup": "^4.3.0",
     "@types/node": "^14.14.25",
     "husky": "^4.2.5",
-    "jasmine-ts": "^0.3.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
+    "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
   },
