--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "2.0.0",
   "description": "code navigation",
   "bin": {
-    "cnav": "./cli/bin/cnav",
-    "goto": "./cli/bin/goto",
-    "cnav2": "./dist/cli/index.js"
+    "cnav": "cli/bin/cnav",
+    "goto": "cli/bin/goto",
+    "cnav2": "dist/cli/index.js"
   },
   "scripts": {
     "pretty:check": "prettier --check .",
@@ -55,6 +55,7 @@
     "commander": "^6.0.0",
     "leveldown": "^5.6.0",
     "levelup": "^4.4.0",
-    "query-string": "^6.13.6"
+    "query-string": "^6.13.6",
+    "simple-git": "^2.34.2"
   }
 }
