--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "scripts": {
     "build:dev": "tsc --watch",
-    "build:prod": "rimraf ./dist && tsc",
+    "build:prod": "rimraf ./dist && tsc -b tsconfig.prod.json",
     "pretty:check": "prettier --check .",
-    "pretty": "prettier --check --write ."
+    "pretty": "prettier --check --write .",
+    "test": "jest"
   },
   "files": [
     "dist"
@@ -31,10 +32,13 @@
   },
   "homepage": "https://github.com/viqueen/codenav#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "husky": "^4.2.5",
+    "jest": "^26.6.3",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
+    "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
   },
   "husky": {
