--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
   "homepage": "https://github.com/viqueen/codenav#readme",
   "devDependencies": {
     "@types/jest": "^26.0.20",
+    "@types/leveldown": "^4.0.2",
+    "@types/levelup": "^4.3.0",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.31",
     "husky": "^4.2.5",
     "jest": "^26.6.3",
