--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "commander": "^6.0.0",
     "leveldown": "^5.6.0",
     "levelup": "^4.4.0",
-    "query-string": "^6.13.6"
+    "query-string": "^6.13.6",
+    "simple-git": "^2.35.2",
+    "task-pool-executor": "^1.0.3"
   }
 }
