--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codenav",
-  "version": "2.0.0",
+  "version": "2.0.0-m01",
   "description": "code navigation",
   "bin": {
     "cnav": "./dist/index.js"
