--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -9,8 +9,7 @@
     "strict": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "declaration": true
+    "resolveJsonModule": true
   },
   "exclude": [
     "node_modules",
