--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -11,5 +11,5 @@ jobs:
         with:
           node-version: 15
       - run: npm ci
-      - run: npm test
-      - run: npm run build:prod
+      - run: npm run ci:test
+      - run: npm run ci:build
