--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "cnav": "./dist/index.js"
   },
   "scripts": {
-    "build:dev": "tsc --watch",
-    "build:prod": "rimraf ./dist && tsc -b tsconfig.prod.json",
-    "pretty:check": "prettier --check .",
-    "pretty": "prettier --check --write .",
-    "test": "jest"
+    "build": "tsc --watch",
+    "test": "jest --watchAll",
+    "ci:test": "jest",
+    "ci:build": "rimraf ./dist && tsc -b tsconfig.prod.json",
+    "format:check": "prettier --check .",
+    "format": "prettier --check --write ."
   },
   "files": [
     "dist"
@@ -46,7 +47,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run pretty:check"
+      "pre-commit": "npm run format:check"
     }
   },
   "dependencies": {
