--- a/package.json
+++ b/package.json
@@ -33,17 +33,17 @@
   },
   "homepage": "https://github.com/viqueen/codenav#readme",
   "devDependencies": {
-    "@types/jest": "^26.0.20",
-    "@types/leveldown": "^4.0.2",
-    "@types/levelup": "^4.3.0",
-    "@types/lodash": "^4.14.168",
-    "@types/node": "^14.14.31",
-    "husky": "^4.2.5",
-    "jest": "^26.6.3",
-    "prettier": "^2.0.5",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.1",
-    "typescript": "^4.1.5"
+    "@types/jest": "26.0.20",
+    "@types/leveldown": "4.0.2",
+    "@types/levelup": "4.3.0",
+    "@types/lodash": "4.14.168",
+    "@types/node": "14.14.31",
+    "husky": "4.2.5",
+    "jest": "26.6.3",
+    "prettier": "2.0.5",
+    "rimraf": "3.0.2",
+    "ts-jest": "26.5.1",
+    "typescript": "4.1.5"
   },
   "husky": {
     "hooks": {
@@ -51,12 +51,12 @@
     }
   },
   "dependencies": {
-    "commander": "^6.0.0",
-    "leveldown": "^5.6.0",
-    "levelup": "^4.4.0",
-    "lodash": "^4.17.21",
-    "query-string": "^6.13.6",
-    "simple-git": "^2.35.2",
-    "task-pool-executor": "^1.0.3"
+    "commander": "6.0.0",
+    "leveldown": "5.6.0",
+    "levelup": "4.4.0",
+    "lodash": "4.17.21",
+    "query-string": "6.13.6",
+    "simple-git": "2.35.2",
+    "task-pool-executor": "1.0.3"
   }
 }
