--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=viqueen_codenav
 sonar.organization=viqueen-github
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.coverage.exclusions=./src/**/*.test.ts
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=notion-renderer
