pull tests into their own folder, and hopefully sonar exclusions are working again

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
-  "exclude": ["node_modules", "cli", "dist", "coverage", "jest.config.js"]
+  "exclude": ["node_modules", "cli", "dist", "coverage", "test", "jest.config.js"]
 }
