--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0-m14",
   "description": "code navigation",
   "bin": {
-    "cnav": "./dist/index.js"
+    "cnav": "./dist/cli/index.js"
   },
   "scripts": {
     "build": "tsc --watch",
