--- a/package.json
+++ b/package.json
@@ -35,27 +35,27 @@
   },
   "homepage": "https://github.com/viqueen/codenav#readme",
   "devDependencies": {
-    "@types/jest": "27.4.0",
+    "@types/jest": "28.1.4",
     "@types/leveldown": "4.0.3",
-    "@types/levelup": "5.1.0",
-    "@types/lodash": "4.14.178",
-    "@types/node": "17.0.13",
-    "husky": "7.0.4",
-    "jest": "27.4.7",
-    "npm-check-updates": "12.2.1",
-    "prettier": "2.5.1",
+    "@types/levelup": "5.1.1",
+    "@types/lodash": "4.14.182",
+    "@types/node": "18.0.3",
+    "husky": "8.0.1",
+    "jest": "28.1.2",
+    "npm-check-updates": "^15.2.6",
+    "prettier": "2.7.1",
     "rimraf": "3.0.2",
-    "ts-jest": "27.1.3",
-    "ts-node": "^10.4.0",
-    "typescript": "4.5.5"
+    "ts-jest": "28.0.5",
+    "ts-node": "^10.8.2",
+    "typescript": "4.7.4"
   },
   "dependencies": {
-    "commander": "9.0.0",
-    "leveldown": "6.1.0",
+    "commander": "9.3.0",
+    "leveldown": "6.1.1",
     "levelup": "5.1.1",
     "lodash": "4.17.21",
     "query-string": "7.1.1",
-    "simple-git": "3.5.0",
+    "simple-git": "3.10.0",
     "task-pool-executor": "1.1.0"
   }
 }
